# tensor_regression

./: .gitignore  .pre-commit-config.yaml  mkdocs.yaml  pyproject.toml
.github/workflows/: build.yml  docs.yml  publish.yml
docs/: index.md  reference.md
tensor_regression/: __init__.py  fixture.py  pytest_plugin.py  stats.py
tensor_regression/tests/: test_check.py  test_fixture.py
tensor_regression/tests/test_check/: test_check_tensor_label_some_label_.npz
tensor_regression/tests/test_fixture/test_simple_GPU_values/: precision_3.yaml
tensor_regression/tests/test_fixture/test_simple_cpu_values/: precision_3_with_gpu_False.yaml  precision_3_with_gpu_True.yaml  precision_None_with_gpu_False.yaml  precision_None_with_gpu_True.yaml
tests/: test_check.py  test_fixture.py
tests/test_fixture/: test_extra_hash_in_file_doesnt_cause_errors.yaml
tests/test_fixture/test_simple_GPU_values/: precision_3.yaml  precision_3_with_gpu_False.yaml  precision_3_with_gpu_True.yaml  precision_None.yaml  precision_None_with_gpu_False.yaml  precision_None_with_gpu_True.yaml
tests/test_fixture/test_simple_cpu_values/: precision_3_with_gpu_False.yaml  precision_3_with_gpu_True.yaml  precision_3_with_gpu_name_False_cpu.yaml  precision_3_with_gpu_name_False_cuda.yaml  precision_3_with_gpu_name_True_cpu.yaml  precision_3_with_gpu_name_True_cuda.yaml  precision_None_with_gpu_name_False_cpu.yaml  precision_None_with_gpu_name_False_cuda.yaml  precision_None_with_gpu_name_True_cpu.yaml  precision_None_with_gpu_name_True_cuda.yaml
