[tool.poetry]
name = "tensor-regression"
version = "0.0.1"
description = "A small wrapper around pytest_regressions for Tensors"
authors = ["Fabrice Normandin <normandf@mila.quebec>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
pytest-regressions = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
